	Edited login.php

Planner: fixed PHP notice issue in unit edit
	Edited file /modules/Planner/units_editProcess.php

Planner: improved unit dump to show lessons in all classes
	Edited file /modules/Planner/units_dump.php

General: fixed cutting edge update code to work between versions (within versions seemed to be working fine)
	Edited files /modules/System Admin/update*.php

v8.0.00
-------
User Admin: exposed hidden-by-default Manage Districts setting
	New values in table gibbonPermission
	
Database: fixed issue leading to some tables becoming InnoDB instead of MyISAM
	Edited table gibbonDistrict
	Edited dev database environment engine setting
	
i18n: Rationalised standard strings across the system
	Edited various files

i18n: added localisation folder for jqueryUI datepicker
	New folder /lib/jquery-ui/i18n
	Removed file /lib/jquery-ui/jquery.ui.datepicker-en-GB.js
	Edited files /index.php, fullscreen.php

i18n: added folders for store localisation data
	New folders /i18n, /i18n/en-US, /i18n/en-GB, /i18n/es, l18n/zh-CN

i18n: added system for storing and managing localisations and system defaults
	New table gibboni18n
	Added values to tables gibbonAction, gibbonPermission
	New files /modules/System Admin/i18n_manageProcess*.php
	Edited file /functions.php

i18n: added ability to choose language on login
	Edited file /functions.php, /login.php

i18n: added ability for a user to choose language preference
	Edited table gibbonPerson
	Edited files /preferences*.php, login.php 
	Edited file /lib/googleOAuth/index.php

User Admin: added Name In Characters to user sync,
	Edited file /modules/User Admin/import_users.php

i18n: adjusted jQueryUI datePicker loading to account for language selection
	Edited file /index.php

Planner: fixed PHP Notice error
	Edited file /modules/Planner/planner_editProcess.php

i18n: adjusted internal date conversion functions to account for language
	Edited file /functions.php
	Edited various files across the system
