@@ -30,6 +30,13 @@ Planner: improved unit dump to show lessons in all classes
 General: fixed cutting edge update code to work between versions (within versions seemed to be working fine)
 	Edited files /modules/System Admin/update*.php
 
+User Admin: fixed blank string translation issue
+	Edited file /modules/User Admin/user_manage.php
+
+Resources: regular user search issue fixed
+	Edited file /modules/Resources/resources_manage.php
+
+
 v8.0.00
 -------
 User Admin: exposed hidden-by-default Manage Districts setting
